# Haxjobs

./: .env.example  .gitignore  600+ Startups Hiring Now - Small Companies.csv  AGENTS.md  AUDIT-2026-06-08.md  AUDIT_PLAN.md  BUGLIST.md  CHANGELOG.md  CV_FRAME_GOVERNANCE.md  HANDOFF.md  Internship Job Boards 2026.txt  MILESTONE_2_PLAN.md  PI_HANDOFF.md  README.md  alembic.ini  api_server.py  build-dash.sh  check_dashboard.py  cv_generate.py  cv_profile.typed.json  cv_profile_helper.py  cv_template.html  cv_validator.py  dashctl.sh  dev  dev-app.sh  dev-watch.sh  dev_reload.py  evaluate_with_hermes.py  executor-103a-report.md  executor-103b-104a-report.md  executor-ui-button-fix-report.md  executor-ui-revision-report.md  generate_ready_packs.py  haxjobs.toml  haxjobs_config.py  pack_builder.sh  pipeline_db.py  post_process.py  process_pending_intakes.py  (+3 more)
.haxaml/: acts.yaml
adapter_research/: 00_summary.md  01_hermes_agent.md  02_codex.md  03_claude_code.md  04_cursor.md  05_gemini_cli.md  06_copilot_cli.md  07_opencode.md  08_cline.md
app/: __init__.py  cli.py  main.py  schemas.py
application_templates/: COVER_LETTER_GOVERNANCE.md  README.md
base_cvs/: base_cv_ai_engineer.html  base_cv_backend_engineer.html  base_cv_finance.html  base_cv_forward_deployed.html  base_cv_full_stack_engineer.html  base_cv_graduate_intern.html  base_cv_software_engineer.html
cron/: draft_outreach.py  email_intake.py  generate_cycle_report.py  import_linkedin_jobs.py  post_process.py  review_outreach.py  run_pipeline.sh  send_email.py  sync_db_to_intake.py  weekly_report.py
cv_variants/: README.md  __init__.py  registry.json  renderer.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
db/: __init__.py  decisions.py  evaluations.py  favorites.py  jobs.py  outreach.py  pack_review.py  role_classification.py  saved.py  schema.py  seed.py  stats.py
(+869 files in other folders)
