[project]
name = "haxjobs"
version = "0.1.3"
description = "HaxJobs is the UI and workflow layer for a Hermes-powered job application pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
