[project]
name = "haxjobs"
version = "1.0.0.dev0"
description = "Self-hosted job search platform"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Arinze Elenasulu"}]
readme = "README.md"
dependencies = [
    "openai>=2.44.0",
    "pydantic>=2.13,<3",
    "rich>=13,<15",
]

[project.scripts]
haxjobs = "haxjobs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haxjobs"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.26",
]
